; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_pet.c_pet_tasks_prepare_internal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_pet.c_pet_tasks_prepare_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pet_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@tasks_threads_lock = common dso_local global i32 0, align 4
@tasks_count = common dso_local global i32 0, align 4
@pet_tasks_size = common dso_local global i32 0, align 4
@pet_tasks = common dso_local global i32* null, align 8
@KERN_RESOURCE_SHORTAGE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pet_tasks_prepare_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pet_tasks_prepare_internal() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @pet_lock, align 4
  %4 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %5 = call i32 @lck_mtx_assert(i32 %3, i32 %4)
  store i32 0, i32* %2, align 4
  br label %6

6:                                                ; preds = %42, %0
  %7 = call i32 @lck_mtx_lock(i32* @tasks_threads_lock)
  %8 = load i32, i32* @tasks_count, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 4
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @pet_tasks_size, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %6
  br label %43

16:                                               ; preds = %6
  %17 = call i32 @lck_mtx_unlock(i32* @tasks_threads_lock)
  %18 = load i32, i32* %2, align 4
  %19 = load i32, i32* @pet_tasks_size, align 4
  %20 = icmp sgt i32 %18, %19
  br i1 %20, label %21, label %42

21:                                               ; preds = %16
  %22 = load i32, i32* @pet_tasks_size, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load i32*, i32** @pet_tasks, align 8
  %26 = load i32, i32* @pet_tasks_size, align 4
  %27 = call i32 @kfree(i32* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %21
  %29 = load i32, i32* %2, align 4
  %30 = icmp sgt i32 %29, 0
  %31 = zext i1 %30 to i32
  %32 = call i32 @assert(i32 %31)
  %33 = load i32, i32* %2, align 4
  store i32 %33, i32* @pet_tasks_size, align 4
  %34 = load i32, i32* @pet_tasks_size, align 4
  %35 = call i64 @kalloc(i32 %34)
  %36 = inttoptr i64 %35 to i32*
  store i32* %36, i32** @pet_tasks, align 8
  %37 = load i32*, i32** @pet_tasks, align 8
  %38 = icmp eq i32* %37, null
  br i1 %38, label %39, label %41

39:                                               ; preds = %28
  store i32 0, i32* @pet_tasks_size, align 4
  %40 = load i32, i32* @KERN_RESOURCE_SHORTAGE, align 4
  store i32 %40, i32* %1, align 4
  br label %45

41:                                               ; preds = %28
  br label %42

42:                                               ; preds = %41, %16
  br label %6

43:                                               ; preds = %15
  %44 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %44, i32* %1, align 4
  br label %45

45:                                               ; preds = %43, %39
  %46 = load i32, i32* %1, align 4
  ret i32 %46
}

declare dso_local i32 @lck_mtx_assert(i32, i32) #1

declare dso_local i32 @lck_mtx_lock(i32*) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1

declare dso_local i32 @kfree(i32*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @kalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
